--- a/assets/css/Navigation-Clean1.css
+++ b/assets/css/Navigation-Clean1.css
@@ -12,7 +12,7 @@ width:100%;
   border:none;
   margin-bottom:0;
   font-family: Proxima Nova, sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
   letter-spacing: .05em;
 }
@@ -195,9 +195,209 @@ div.fullbleed {
   z-index: -1;
 }
 
+div.aboutimage img {
+  max-height: 450px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.newsimage img {
+  max-height: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 30px;
+}
+
+div.singleimage img {
+  max-width: 980px;
+  max-height: 600px;
+}
+
+div.singleimage p {
+  max-width: 980px;
+  margin-left: auto;
+  margin-right:auto;
+  text-align: left;
+  padding-left:90px;
+  padding-top:20px;
+  padding-bottom: 16px;
+}
+
 @media (max-width:767px) {
   div.fullbleed {
     background-position: top right;
   }
 }
 
+div.form {
+font-family: Proxima Nova, sans-serif;
+}
+
+div.form h1,h2 {
+  font-weight: 100;
+  text-align: center;
+  letter-spacing: .01em;
+}
+
+div.form h1 {
+font-size: 2.3em;
+margin-top: 0;
+margin-bottom: 16px;
+}
+
+div.form h2 {
+  font-size:1.9em;
+}
+
+div.form h3 {
+  font-size:1.5em;
+  line-height: 1.5em;
+  text-align: center;
+  font-weight: 100;
+  padding-left: 84px;
+  padding-right: 84px;
+  padding-bottom: 10px;
+}
+
+div.form {
+padding-left: 28px!important;
+padding-right: 28px!important;
+}
+
+div.form p {
+font-weight: 300;
+font-size: 1.1em;
+margin-bottom: 4px;
+}
+
+div.news {
+font-family: Proxima Nova, sans-serif;
+}
+
+div.news h1,h2 {
+  font-weight: 100;
+  text-align: center;
+  letter-spacing: .01em;
+}
+
+div.news h1 {
+  font-size: 2.3em;
+margin-top: 0;
+margin-bottom: 16px;
+}
+
+div.news h2 {
+  font-size:1.9em;
+}
+
+div.news h3 {
+  font-size:1.5em;
+  line-height: 1.5em;
+  text-align: left;
+  font-weight: 100;
+  padding-bottom: 10px;
+}
+
+div.news {
+padding-left: 28px;
+padding-right: 28px;
+}
+
+div.news p {
+font-weight: 300;
+font-size: 1.1em;
+margin-bottom: 4px;
+}
+
+div.news h4 {
+  border-bottom: 1px solid;
+  padding-bottom: 5px;
+  font-size: 1em;
+  font-weight: 100;
+  letter-spacing: .03em;
+  text-transform: uppercase;
+}
+
+span.title {
+  font-style:italic!important;
+}
+.form-control {
+  border-radius: 0;
+  background-color:#fafafa;
+}
+
+.button {
+    font-weight: 100;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+    margin-bottom: 20px;
+    padding: 10px;
+    background-color: #000;
+    color:#fff;
+    border:none;
+    text-align: center;
+    min-width:100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 22px;
+}
+
+label {
+  font-weight:100!important;
+  padding-top: 6px;
+  font-size:.9em;
+}
+
+.singleimage ul li img {
+  max-width: 40px;
+}
+
+.singleimage ul li {
+  list-style-type: none;
+  float:right;
+  overflow: none;
+}
+
+.singleimage p {
+font-family: Proxima Nova;
+}
+
+@media (max-width:767px) {
+div.singleimage p {
+  padding-left: 0;
+}}
+
+.footer {
+  text-align: center;
+  border-top: 1px solid #8c8b8b;
+  font-size: .8em;
+  font-family: Proxima Nova;
+  font-weight:100;
+  clear:both;
+}
+
+.footer p {
+  padding-top: 14px;
+}
+
+.thumbnail {
+  border-radius: 0;
+  border:none;
+  padding: 0;
+  background-color:#fff;
+  box-shadow: none;
+}
+
+.col-xs-6 {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 0;
+  margin-bottom:-3px;
+}
+
+@media (max-width:767px) {
+  .col-xs-6 {
+    width:100%;
+  }
+}
