--- a/assets/css/Navigation-Clean1.css
+++ b/assets/css/Navigation-Clean1.css
@@ -208,6 +208,10 @@ div.newsimage img {
   padding-bottom: 30px;
 }
 
+.border {
+border: 1px solid black;
+}
+
 div.singleimage img {
   max-width: 980px;
   max-height: 600px;
